version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/FE/CDB/SFEBlockCommand.rst.txt
.. vale off



:class:`SFEBlockCommand`
========================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.FE.CDB.SFEBlockCommand(iSFEBlockCommandObj: Ansys.Common.Interop.FEParsePlugin_ANSYS.ISFEBlockCommand)

   Bases: :py:obj:`object`


   
   Represents a SFEBLOCK command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: SFEBlockCommand

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ElementSurfaceLoadCount`
            - Gets the number of element surface loads.
          * - :py:attr:`~ElementSurfaceLoads`
            - Get the element surface loads.
          * - :py:attr:`~Format`
            - Gets the Format.
          * - :py:attr:`~FullName`
            - FullName property.
          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~IsDefinedFromTable`
            - Gets whether the values are defined using a table.
          * - :py:attr:`~Lab`
            - Gets the surface load label.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~ToCdbCommandString`
            - Gets the command text formatted as a CDB file entry.







Property detail
---------------
.. py:property:: ElementSurfaceLoadCount
   :type: Optional[int]


   
   Gets the number of element surface loads.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElementSurfaceLoads
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.FE.CDB.CommandElementSurfaceLoad]]


   
   Get the element surface loads.
















   ..
       !! processed by numpydoc !!

.. py:property:: Format
   :type: Optional[str]


   
   Gets the Format.
















   ..
       !! processed by numpydoc !!

.. py:property:: FullName
   :type: Optional[str]


   
   FullName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: IsDefinedFromTable
   :type: Optional[bool]


   
   Gets whether the values are defined using a table.
















   ..
       !! processed by numpydoc !!

.. py:property:: Lab
   :type: Optional[str]


   
   Gets the surface load label.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: ToCdbCommandString
   :type: Optional[Ansys.ACT.Automation.Mechanical.FE.CDB.CdbCommandFormatAndParameter]


   
   Gets the command text formatted as a CDB file entry.
   Gets the command parameters formatted as a string.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on